k8s/glpi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glpi
  namespace: glpi
spec:
  selector:
    app: glpi
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
