k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: glpi
spec:
  selector:
    app: mariadb
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP   ***REMOVED*** Внутрішній сервіс — GLPI буде звертатись як mariadb.glpi.svc.cluster.local
